Fix spacing for img

--- a/src/components/_quote.scss
+++ b/src/components/_quote.scss
@@ -4,6 +4,7 @@
 	background-color: $aqua;
 	.flx-wrapper {
 		display: flex;
+		justify-content: space-between;
 		.block {
 			h3 {
 				font-size: 1.875rem;
